--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <button id="button">Wylosuj liczbę</button>
-    <div id="blok"></div>
+<!--    <div id="blok"></div>-->
 
     <script src="jkm.js"></script>
 </body>
