brak tylko cytatów

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <button id="button">Wylosuj liczbę</button>
-<!--    <div id="blok"></div>-->
+    <button id="button">Genruj losowo wypowiedź JKM</button>
+    <div id="blok"></div>
 
     <script src="jkm.js"></script>
 </body>
