--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button id="button">Genruj losowo wypowiedź JKM</button>
+    <button id="button">Generuj losowo wypowiedź JKM</button>
     <div id="blok"></div>
 
     <script src="jkm.js"></script>
