responsywność /boot/ + fav

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Losowanko</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-    <button id="button">Generuj losowo wypowiedź JKM</button>
+    <button id="button" type="button" class="btn btn-primary btn-lg btn-block">Generuj losowo wypowiedź JKM</button>
     <div id="blok"></div>
 
     <script src="jkm.js"></script>
