--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <button id="button" type="button" class="btn btn-primary btn-lg btn-block">Generuj losowo wypowiedź JKM</button>
     <div id="blok"></div>
-    <div class="comb"><hr>Aż 113 379 904 kombinacji!</div>
+    <div class="comb"><hr>Aż 113 379 904 kombinacje wypowiedzi!</div>
 
     <script src="jkm.js"></script>
 </body>
